--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -154,6 +154,9 @@
     <ClCompile Include="ObjIcicle.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="ObjAitem.cpp">
+      <Filter>Item</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CObjAngleBullet.h">
@@ -302,6 +305,9 @@
     </ClInclude>
     <ClInclude Include="ObjIcicle.h">
       <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjAitem.h">
+      <Filter>Item</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
