--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -148,14 +148,14 @@
     <ClCompile Include="Graf.cpp">
       <Filter>SceneStage</Filter>
     </ClCompile>
-    <ClCompile Include="ObjEnemyJump2.cpp">
-      <Filter>Enemy\ジャンプ</Filter>
-    </ClCompile>
     <ClCompile Include="ObjIcicle.cpp">
       <Filter>Enemy</Filter>
     </ClCompile>
     <ClCompile Include="ObjAitem.cpp">
       <Filter>Item</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjSlime.cpp">
+      <Filter>Enemy\ジャンプ</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -308,6 +308,9 @@
     </ClInclude>
     <ClInclude Include="ObjAitem.h">
       <Filter>Item</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjSlime.h">
+      <Filter>Enemy\ジャンプ</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
