--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -64,9 +64,6 @@
     <ClCompile Include="SceneGameOver.cpp">
       <Filter>GameOver</Filter>
     </ClCompile>
-    <ClCompile Include="ObjClear.cpp">
-      <Filter>リソースファイル</Filter>
-    </ClCompile>
     <ClCompile Include="SceneClear.cpp">
       <Filter>Clear</Filter>
     </ClCompile>
@@ -153,6 +150,12 @@
     </ClCompile>
     <ClCompile Include="ObjRevolutionBullet.cpp">
       <Filter>Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjDangerWall.cpp">
+      <Filter>Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjClear.cpp">
+      <Filter>Clear</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -246,9 +249,6 @@
     <ClInclude Include="ObjCursor.h">
       <Filter>UI</Filter>
     </ClInclude>
-    <ClInclude Include="ObjMain.h">
-      <Filter>UI</Filter>
-    </ClInclude>
     <ClInclude Include="ObjTitle.h">
       <Filter>Title</Filter>
     </ClInclude>
@@ -305,6 +305,12 @@
     </ClInclude>
     <ClInclude Include="ObjIcicle.h">
       <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjDangerWall.h">
+      <Filter>Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjMain.h">
+      <Filter>Clear</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
