致命的エラー修正(当たり判定) グレネード追加(グラフィックまだ) カーソル位置修正 ダメージ・ガード時のSE追加完了 クリア画面からチュートリアルに移行できない問題を修正 ラストボスにグレネード適用(仮) ラストボスステージからリスタートできない問題を修正

--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -158,6 +158,9 @@
     <ClCompile Include="ObjMethod.cpp">
       <Filter>UI\操作方法</Filter>
     </ClCompile>
+    <ClCompile Include="ObjGrenade.cpp">
+      <Filter>Bullet</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CObjAngleBullet.h">
@@ -313,6 +316,9 @@
     <ClInclude Include="ObjGren.h" />
     <ClInclude Include="ObjMethod.h">
       <Filter>UI\操作方法</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjGrenade.h">
+      <Filter>Bullet</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
